--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':app'
 include ':modules:Base'                          //基础插件
 include ':modules:Plugin_Main'
+include ':adaptivegridview'
