--- a/modules/Base/build.gradle
+++ b/modules/Base/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 
     api "$library.mmkv"
     api "$library.autosize"
-    api "$library.svga"
+//    api "$library.svga"
 }
 
 configurations.all {
